# modorganizer-preview_dds

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  DDSPreview.py  preview_dds_en.ts
src/DDS/: CMakeLists.txt  DDSDefinitions.py  DDSFile.py  glstuff.py
